--- a/th-quote.cabal
+++ b/th-quote.cabal
@@ -1,8 +1,14 @@
 cabal-version:       >=1.10
 name:                th-quote
 version:             0.1
-synopsis:            TODO RGS
-description:         TODO RGS.
+synopsis:            Backward- (and forward-)compatible Quote class
+description:         This package defines a "Language.Haskell.TH.Syntax.Quote"
+                     module providing a @Quote@ class that works across all
+                     versions of @template-haskell@. On recent versions of
+                     @template-haskell@ (2.17.0.0 or later), this module simply
+                     reexports @Quote@ from "Language.Haskell.TH.Syntax". Refer
+                     to the Haddocks for "Language.Haskell.TH.Syntax.Quote" for
+                     an example of how to use this module.
 homepage:            https://github.com/haskell-compat/th-quote
 bug-reports:         https://github.com/haskell-compat/th-quote/issues
 license:             BSD3
