--- a/th-quote.cabal
+++ b/th-quote.cabal
@@ -46,6 +46,8 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
+  if impl(ghc >= 8.6)
+    ghc-options:       -Wno-star-is-type
 
 test-suite spec
   type:                exitcode-stdio-1.0
