Add Splice(Q) and liftTypedFromUntypedSplice
These are primarily useful for defining `liftTyped` manually without
needing excessive amounts of CPP. See the Haddocks for
`liftTypedFromUntypedSplice` for an example.

Progress towards #2.

--- a/th-compat.cabal
+++ b/th-compat.cabal
@@ -54,6 +54,7 @@ test-suite spec
   type:                exitcode-stdio-1.0
   main-is:             Spec.hs
   other-modules:       Language.Haskell.TH.Syntax.CompatSpec
+                       Types
   build-depends:       base             >= 4.3 && < 5
                      , base-compat      >= 0.6 && < 0.12
                      , hspec            >= 2   && < 3
