--- a/th-compat.cabal
+++ b/th-compat.cabal
@@ -5,8 +5,9 @@ synopsis:            Backward- (and forward-)compatible Quote and Code types
 description:         This package defines a "Language.Haskell.TH.Syntax.Compat"
                      module, which backports the @Quote@ and @Code@ types to
                      work across a wide range of @template-haskell@ versions.
+                     The @makeRelativeToProject@ utility is also backported.
                      On recent versions of @template-haskell@ (2.17.0.0 or
-                     later), this module simply reexports @Quote@ and @Code@
+                     later), this module simply reexports definitions
                      from "Language.Haskell.TH.Syntax". Refer to the Haddocks
                      for "Language.Haskell.TH.Syntax.Compat" for examples of
                      how to use this module.
@@ -47,6 +48,9 @@ library
   if !impl(ghc >= 8.0)
     build-depends:     fail             == 4.9.*
                      , transformers     >= 0.2 && < 0.7
+  if !impl(ghc >= 9.4)
+    build-depends:     filepath         >= 1.2.0.0 && < 1.5
+                     , directory        >= 1.1.0.0 && < 1.4
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -Wall
